2014-12-15  Ron Norman (rjn@inglenet.com)
	* Fix for codeoptim.c and typeck.c to correctly handle SET pointer UP/DOWN
	  on none x86 platforms

2014-12-11  Ron Norman (rjn@inglenet.com)
	* Fixes so WARNING is given if no DETAIL lines in a report

2014-06-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* parser.* : fixing Bug #79 by defining PLUS_KEYWORD: PLUS|+

2014-06-14  Ron Norman (rjn@inglenet.com)

	* Fixes for LINE|COL 0 to get error message

2014-02-17  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* cobc.c : Tweaked --info for showing current settings (environment) along
		with settings hard-wired during build (COB_xyz)

2014-01-07  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* typeck.c : Bugfix: no exception check for NULL address on FREE statement
		(as this is explicit allowed)

2014-01-02  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c : Fixing Bug #55
		UDF with no parameters do not compile

2013-11-20  Ron Norman

	* Report Writer module

2012-05-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.c : Added conversion for enabling options in WIN style

201?-??-??  ??

	* parser.* : Added checks for RETURNING item: OCCURS, LOCAL-STORAGE

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

20??-??-??  Roger While <simrw@sim-basis.de>

	* cobc.*, codegen.c, tree.h, typeck.c : Adding new commands to cobc
		--info with most important configuration/environment details
		--list-system for displaying all registered system routines

20??-??-??  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* codegen.c : Simplify by handling stuff for different compilers
		by general define (COB_ALIGN)

20??-??-??  Roger While <simrw@sim-basis.de>

	* cobc.c, cobc.h, tree.h : Simplify by handling stuff for 
		different compilers by general defines (CB_COPT_x, COB_A_...),
		added parsing step and source name to verbose messages,